--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "nprogress": "^0.2.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
